<resources>
    <string name="app_name">BlockChain</string>

    <!--首页-->
    <string name="title_home">首页</string>
    <string name="title_friend">好友列表</string>
    <string name="title_info">个人中心</string>
    <string name="title_help">帮助</string>

    <!--PersonalActivity-->
    <string name="person_head">头像</string>
    <string name="person_motify">修改资料</string>
    <string name="person_nick_name">昵称</string>
    <string name="person_name">真实姓名</string>
    <string name="person_phone">手机号码</string>
    <string name="person_sex">性别</string>
    <string name="person_birthday">生日</string>
    <string name="person_work">单位</string>
    <string name="person_sex_man">男</string>
    <string name="person_sex_woman">女</string>
    <string name="person_signature">个性签名</string>

    <!--RegisterActivity-->
    <string name="register_phone">输入手机号</string>
    <string name="register_psd">输入密码</string>
    <string name="register_psd_agin">再次输入密码</string>
    <string name="register_code">输入验证码</string>
    <string name="register_now">立即注册</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_to_login">登录</string>
    <string name="register_has_send_code">验证码已发送</string>
    <string name="register_code_err">验证码发送失败</string>
    <string name="register_success">注册成功</string>
    <!--LoginActivity-->
    <string name="login_phone">输入手机号/账号</string>
    <string name="login_psd">输入密码</string>
    <string name="login_now">立即登录</string>
    <string name="login_to_reg">注册</string>
    <string name="login_failure">登录失败</string>
    <!--personFragment-->
    <string name="mine_title">我的</string>
    <string name="mine_work">技术岗位</string>
    <string name="mine_qr">点击二维码获取邀请码</string>
    <string name="mine_no_invite">此账户没有邀请码</string>
    <string name="mine_date_err">邀请码信息获取失败</string>
    <string name="mine_motify">修改个人信息</string>
    <!--friendFragment-->
    <string name="friend_list">好友列表</string>
    <!--HelpFragment-->
    <string name="help">帮  助</string>
    <!--MessageCenterActivity-->
    <string name="msg_title">消息中心</string>
    <string name="msg_new_friend">新的朋友</string>
    <string name="msg_new_i_apply">我的申请</string>
    <string name="msg_permit">同意</string>
    <string name="msg_refuse">拒绝</string>
    <string name="msg_has_refuse">已拒绝</string>
    <string name="msg_has_permit">已同意</string>
    <string name="msg_wait_resolve">待处理</string>
    <string name="msg_other_apply">申请加我</string>
    <string name="msg_i_apply">我申请的</string>
    <!--积分-->
    <string name="score_title">信誉积分</string>
    <string name="score_record">交易记录</string>
    <string name="score_ordernum">您的订单号：</string>
    <string name="score_time">交易时间：</string>
    <string name="score_money">交易金额：</string>
    <string name="score_intro">交易说明：</string>
    <string name="score_extro">您的信誉积分余额为 ></string>
<!--SearchActivity-->
    <string name="search_hint">搜索好友</string>
    <!--提示信息-->
    <string name="warn_phone">请输入电话号码</string>
    <string name="warn_psd">请输入密码</string>
    <string name="warn_psd_agin">请再一次输入密码</string>
    <string name="warn_code">请输入验证码</string>
    <string name="warn_no_same">密码不一致</string>
    <string name="no_permission">缺少相关权限</string>
    <string name="no_info">暂无</string>
    <string name="motify_success">资料更新成功</string>
    <string name="no_search_data">未搜索到数据</string>
    <string name="loading">正在登录</string>
    <string name="has_upload">通讯录已同步</string>
    <!--唯一Id-->
    <item type="id" name="tag_permit" ></item>
    <item type="id" name="tag_refuse" ></item>
</resources>
