<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="vertical">
    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/person_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@mipmap/white_back"
            app:title="@string/person_motify"
            app:titleTextAppearance="@style/ToolbarTitle"
            app:titleTextColor="@color/white"/>
    </LinearLayout>
    <View android:layout_width="match_parent" android:layout_height="20dp"
          android:background="@color/grayLine"></View>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
        >
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="100dp"
                          android:gravity="center_vertical"
                          android:orientation="horizontal"
                          android:paddingLeft="16dp">
                <TextView android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:layout_weight="1"
                          android:gravity="center_vertical"
                          android:text="@string/person_head"/>
                <ImageView
                    android:id="@+id/small_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="5dp"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/default_head"
                    android:transitionName="btn1"/>
            </LinearLayout>
            <block.com.blockchain.customview.BasicEditInfoView
                android:id="@+id/person_nick_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ltext="@string/person_nick_name"/>
            <block.com.blockchain.customview.BasicEditInfoView
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ltext="@string/person_name"/>
            <block.com.blockchain.customview.BasicInfoView
                android:id="@+id/person_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ltext="@string/person_phone"/>
            <block.com.blockchain.customview.BasicInfoView
                android:id="@+id/person_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ltext="@string/person_sex"/>
            <block.com.blockchain.customview.BasicInfoView
                android:id="@+id/person_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ltext="@string/person_birthday"/>
            <block.com.blockchain.customview.BasicEditInfoView
                android:id="@+id/person_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ltext="@string/person_work"/>
            <block.com.blockchain.customview.BasicEditInfoView
                android:id="@+id/person_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ltext="@string/person_signature"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>