<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@mipmap/logo"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:counterMaxLength="11">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawableLeft="@mipmap/register_user"
            android:drawablePadding="10dp"
            android:hint="@string/login_phone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:textSize="14sp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/psd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/psd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawableLeft="@mipmap/register_psd"
            android:drawablePadding="10dp"
            android:hint="@string/login_psd"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp"/>
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_common_round_blue"
        android:gravity="center"
        android:text="@string/login_now"
        android:textColor="@color/white"
        android:textSize="16sp"/>
    <View android:layout_width="wrap_content" android:layout_height="0dp"
          android:layout_weight="1"/>
    <TextView
        android:id="@+id/change_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_common_round_stroke_blue"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:text="@string/login_to_reg"
        android:textColor="@color/blue"
        android:textSize="14sp"/>
</LinearLayout>
