<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@mipmap/back"
        app:title="@string/score_title"
        app:titleTextColor="@color/black">

    </android.support.v7.widget.Toolbar>
    <View
        style="@style/line_style_gray"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/mine_title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/score_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/default_head"/>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="10dp"
                      android:layout_weight="1"
                      android:orientation="vertical">
            <TextView
                android:id="@+id/score_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/score_extro"
                android:textColor="@color/text_color"
                android:textSize="12sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/score_extro_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/blue"
            android:textSize="16sp"
        />
    </LinearLayout>
    <View
        style="@style/line_style_gray"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="16dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/score_record"/>
        <TextView
            android:id="@+id/score_order_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>
    <!--<android.support.v4.widget.SwipeRefreshLayout-->
    <!--android:id="@+id/swipe_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->
    <!---->
    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
</LinearLayout>