<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:id="@+id/parent_layout"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:paddingBottom="10dp"
              android:paddingTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mine_title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/msg_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/default_head"/>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:layout_marginLeft="10dp"
                      android:orientation="vertical">
            <TextView
                android:id="@+id/msg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="昵称"
                android:textColor="@color/text_color"
                android:textSize="14sp"/>
            <ImageView
                android:id="@+id/msg_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@mipmap/man"

            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_wait_permit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
        >
            <TextView
                android:id="@+id/msg_wait_permit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_common_round_blue"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                android:paddingTop="5dp"
                android:text="@string/msg_permit"
                android:textColor="@color/white"
                android:textSize="14sp"
            />
            <TextView
                android:id="@+id/msg_wait_refuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_common_round_blue"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/msg_refuse"
                android:textColor="@color/white"
                android:textSize="14sp"
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_has_permit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/msg_has_permit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_has_permit"
                android:textColor="@color/gray"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/msg_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>